# lst

./: .gitignore  Cargo.toml  README.md  structure.json
.github/workflows/: release.yml
scripts/: install.ps1  uninstall.ps1
src/: error.rs  lib.rs  main.rs  prelude.rs
src/args/: mod.rs
src/cli/: args.rs  mod.rs  parser.rs
src/commands/: list.rs  search.rs
src/core/: filters.rs  mod.rs  search.rs  tree.rs
src/output/: formatter.rs  highlight.rs  mod.rs  printer.rs  terminal.rs
