[package]
name = "lst"
version = "0.1.0"
authors = ["Arman Maurya <mauryaarman5@gmail.com>"]
edition = "2021"
description = "A fast CLI tool for listing directories"
license = "MIT"
repository = "https://github.com/armanmaurya/lst"

[dependencies]
walkdir = "2"
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
humansize = "2.1.3"
syntect = "5.2.0"
dashmap = "5"
aho-corasick = "1.1"
ignore = "0.4"
rayon = "1.11"
serde_json = "1"


[package.metadata.deb]
maintainer = "Arman Maurya <mauryaarman5@gmail.com>"
section = "utils"
priority = "optional"
extended-description = "A fast CLI tool for listing directories"
assets = [
  ["target/release/lst", "usr/bin/lst", "755"]
]
